hover dropdown css fix + freight forward service page change + header collapsed breakpoint fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @media (min-width: 768px) {
     .logo-margin{
-        margin-left: 12% !important;
+        margin-left: 11% !important;
     }
 }
 .header-skew{
@@ -83,7 +83,7 @@
     border: unset;
     padding: 0;
     i{
-        font-size: 1%;
+        font-size: 0.75rem;
         margin-right: 0.5rem;
     }
     
